--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table">
+    <!-- <section id="book-a-table" class="book-a-table">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -696,7 +696,7 @@
           <div class="text-center"><button type="submit">Book a Table</button></div>
         </form>
 
-      </div>
+      </div> -->
     </section><!-- End Book A Table Section -->
 
     <!-- ======= Testimonials Section ======= -->
