Adjusted changes on the map

--- a/index.html
+++ b/index.html
@@ -979,9 +979,13 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d31899.88331462492!2d30.04712540414211!3d-1.9594349734574832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-1.9675479999999999!2d30.0549678!4m5!1s0x19dca755bbfc4a1b%3A0x2159b2a4c3a62243!2sthe%20living%20room!3m2!1d-1.9565841!2d30.0803689!5e0!3m2!1sen!2srw!4v1704826178121!5m2!1sen!2srw"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.492228863724!2d30.077788407736293!3d-1.956570798017459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca755bbfc4a1b%3A0x2159b2a4c3a62243!2sThe%20Living%20Room!5e0!3m2!1sen!2srw!4v1704881517136!5m2!1sen!2srw"
               width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <iframe
+              src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d31899.88331462492!2d30.04712540414211!3d-1.9594349734574832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-1.9675479999999999!2d30.0549678!4m5!1s0x19dca755bbfc4a1b%3A0x2159b2a4c3a62243!2sthe%20living%20room!3m2!1d-1.9565841!2d30.0803689!5e0!3m2!1sen!2srw!4v1704826178121!5m2!1sen!2srw"
+              width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
             <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -1023,12 +1027,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+              <h3>THE LIVING ROOM</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                32 KG 28 Avenue <br>Kigali, Rwanda<br><BR>
+                <strong>Phone:</strong> +250 788 587 775<br><br>
+
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
