Changes on the time

--- a/index.html
+++ b/index.html
@@ -951,13 +951,13 @@
                 <i class="bi bi-clock"></i>
                 <h4>Open Hours:</h4><br><br>
                 <p>
-                  <li>Mon: 11:00 AM - 2300 PM</li>
-                  <li>Tue: 11:00 AM - 2300 PM</li>
-                  <li>Wed: 11:00 AM - 2300 PM</li>
-                  <li>Thu: 11:00 AM - 2300 PM</li>
-                  <li>Fri: 11:00 AM - 2300 PM</li>
-                  <li>Sat: 11:00 AM - 2300 PM</li>
-                  <li>Sun: 11:00 AM - 2300 PM</li>
+                  <li>Mon: 12:00 noon  - 12:00 midnight</li>
+                  <li>Tue: 12:00 noon  - 12:00 midnight</li>
+                  <li>Wed: 12:00 noon  - 12:00 midnight</li>
+                  <li>Thu: 12:00 noon  - 12:00 midnight</li>
+                  <li>Fri: 12:00 noon  - 12:00 midnight</li>
+                  <li>Sat: 04:00 pm  - 12:00 midnight</li>
+                  <li>Sun: 04:00 pm  - 12:00 midnight</li>
                 </p>
               </div>
 
