Adjusted prices on menu

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Living Room Soup</a><span>8000</span>
+              <a href="#">Living Room Soup</a><span>9000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -251,7 +251,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Shrimp Avocat Tartar</a><span>13000</span>
+              <a href="#">Tuna Salade with Green Apples</a><span>9000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -260,7 +260,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Fried Sambaza Green Salad</a><span>8000</span>
+              <a href="#">Shrimp Avocat Tartar</a><span>10000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -269,7 +269,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Spinash Ravioli with Cream</a><span>12000</span>
+              <a href="#">Fried Sambaza Green Salad</a><span>12000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -278,7 +278,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Smoked Salmon and Toast</a><span>24000</span>
+              <a href="#">Fresh Raw Salad</a><span>9000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -287,7 +287,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Captain Green Pepper Sauce</a><span>16000</span>
+              <a href="#">Eggs Mayonnaise</a><span>8000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -296,7 +296,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Captain's Skewer</a><span>15000</span>
+              <a href="#">Captain Green Pepper Sauce</a><span>19000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -305,7 +305,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tilapia Fillet Meuniere</a><span>18000</span>
+              <a href="#">Captain's Skewer</a><span>19000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -314,7 +314,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Living Room Burger</a><span>13000</span>
+              <a href="#">Tilapia Fillet Meuniere</a><span>23000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -323,7 +323,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Beef Tenderloin Skewer</a><span>14000</span>
+              <a href="#">Living Room Burger</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -332,7 +332,16 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Green Pepper Beef Fillet</a><span>15000</span>
+              <a href="#">Beef Tenderloin Skewer</a><span>18000</span>
+            </div>
+            <!-- <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div> -->
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Green Pepper Beef Fillet</a><span>21000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -342,7 +351,7 @@
           <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Cameroun Braised Chicken</a><span>14000</span>
+              <a href="#">Cameroun Braised Chicken</a><span>19000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -351,17 +360,26 @@
           <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Yassa Chicken</a><span>14000</span>
+              <a href="#">Yassa Chicken</a><span>19000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
+            </div> -->
+          </div>
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Tagliatelle Bolognese</a><span>18000</span>
+            </div>
+            <!-- <div class="menu-ingredients">
+              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
             </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tagliatelle Carbonara</a><span>12000</span>
+              <a href="#">Tagliatelle Carbonara</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
@@ -371,7 +389,7 @@
           <div class="col-lg-6 menu-item filter-thai">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Khao Pad Kai</a><span>13000</span>
+              <a href="#">Khao Pad Kai</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -381,7 +399,7 @@
           <div class="col-lg-6 menu-item filter-thai">
             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Khao Pad Kung</a><span>15000</span>
+              <a href="#">Khao Pad Kung</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Fresh spinach, crisp romaine, tomatoes, and Greek olives
@@ -391,7 +409,7 @@
           <div class="col-lg-6 menu-item filter-thai">
             <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Panang Curry</a><span>15000</span>
+              <a href="#">Panang Curry</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
@@ -401,7 +419,7 @@
           <div class="col-lg-6 menu-item filter-thai">
             <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Pad Kra Pao Pork Curry</a><span>15000</span>
+              <a href="#">Pad Kra Pao Pork Curry</a><span>18000</span>
             </div>
             <!-- <div class="menu-ingredients">
               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
